k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mdb-health
  labels:
    name: mdb-health
    environment: production
