k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: mdb-health
  labels:
    app: fastapi
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: fastapi
  sessionAffinity: None # Load balancing sem sticky sessions
